--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <body>
     <header class="header">
       <div class="header-container wrapper">
+        <nav>
+          <img src="images/logo.svg" alt="" />
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contract</a></li>
+            <li><a href="#">Sign in</a></li>
+            <li><a href="#" class="sign-up-btn"></a>Sign up</li>
+          </ul>
+        </nav>
         <div class="header-text">
           <div>
             <h1>Responsive layouts <span>don't have to be a struggle</span></h1>
